--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "awbridgers.github.io",
+  "homepage": "https://awbridgers.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
